--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,24 @@
  * {
      font-family: Arial, Helvetica, sans-serif;
  }
+  
+nav  {
+    float: right;
+
+}
+  
+  nav ul {
+    list-style-type: none;
+ 
+  } 
+  nav ul li { 
+    display: inline;
+    margin-left: 20px;
+    list-style-type: none;
+    color: black ;
+  }
+  /* body{
+    background: url("./images/23735464.JPG");
+    background-size: cover;
+    background-repeat: no-repeat;
+} */
