--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,22 +12,27 @@
 </head>
 <body>
     <header class="bg-danger text-center">
-        <h1>Questions and Answers from the Tech World</h1>
         <nav>
-        {{#if logged_in}}
-        <a href="/profile">profile</a> |
-        <button class="no-button" id="logout">logout</button>
-        {{else}}
-        <a href="/login">login</a>
-        {{/if}}
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/dashboard">Dashboard</a></li>
+              {{#if logged_in}}
+                <li><a href="/logout">logout</a></li>  |
+                <button class="no-button" id="logout">logout</button>
+              {{else}}
+                  <li><a href="/login">Login</a></li>
+              {{/if}}
+          </ul>
         </nav>
+        <h1>Questions and Answers from the Tech World</h1>
+
     </header>
 
 
   {{#if logged_in}}
   <script src="/js/logout.js"></script>
+ 
   {{/if}}
-
   {{{ body }}}
 </body>
 
