--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,14 +17,14 @@
             <li><a href="/">Home</a></li>
             <li><a href="/dashboard">Dashboard</a></li>
               {{#if logged_in}}
-                <li><a href="/logout">logout</a></li>  |
+                <li><a href="/logout">Logout</a></li>  |
                 <button class="no-button" id="logout">logout</button>
               {{else}}
                   <li><a href="/login">Login</a></li>
               {{/if}}
           </ul>
         </nav>
-        <h1>Questions and Answers from the Tech World</h1>
+        <h1>Talking the Tech World</h1>
 
     </header>
 
