--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,44 +2,61 @@
      font-family: Arial, Helvetica, sans-serif;
  }
   
-ader{
-    max-height: 10%;
-
+h1{
+  display:inline-block;
+  text-align: start;
+  border: solid;
 }
-  
-  nav ul {
-    list-style-type: none;
- 
-  } 
-  nav  {
-    float: right;
+.card{
+  box-shadow: 5px 10px #888888;
 }
 
-  nav ul li { 
-    display: inline;
-    margin-left: 20px;
-    list-style-type: none;
-    color: black ;
-  }
 .container {
     display:inline-block;
     flex-wrap: wrap;
-    background-color: lightgrey;
+    /* background-color: lightgrey; */
   }
-/* 
+/* The sidebar menu */
+.sidenav {
+  height: 100%; /* Full-height: remove this if you want "auto" height */
+  width: 160px; /* Set the width of the sidebar */
+  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+  z-index: 1; /* Stay on top */
+  top:50px; /* Stay at the top */
+  left: 0;
+  background-color: rgb(44, 42, 42); /* Black */
+  overflow-x: hidden; /* Disable horizontal scroll */
+  padding-top: 20px;
+  color: #818181;
+}
+
+/* The navigation menu links */
+.sidenav a {
+  padding: 6px 8px 6px 16px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+  color: #f1f1f1;
+}
+
+/* Style page content */
+.main {
+  margin-left: 140px; /* Same width as the sidebar + left position in px */
+  font-size: 28px; /* Increased text to enable scrolling */
+  padding: 0px 10px;
 
 
-.sidebar {
-    display:inline-block
-  }
-  .card {
-    text-align: center; 
-    border-style: solid;
-    border-width: .2rem;
-    border-radius: 1rem;
-    padding: 1rem;
-    max-width: 80%;
-} */
+/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
 @media screen and (max-width: 600px) {
   .column {
       width: 100%;
