--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,36 +5,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Function My TechBlog!</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
-<body>
-    <header class="bg-danger text-center">
-        <nav>
-          <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/dashboard">Dashboard</a></li>
-              {{#if logged_in}}
-                <li><a href="/logout">Logout</a></li>  |
-                <button class="no-button" id="logout">logout</button>
-              {{else}}
-                  <li><a href="/login">Login</a></li>
-              {{/if}}
-          </ul>
-        </nav>
-        <h1>Talking the Tech World</h1>
-
-    </header>
 
 
-  {{#if logged_in}}
-  <script src="/js/logout.js"></script>
- 
-  {{/if}}
-  {{{ body }}}
-</body>
+    <h1>Talking the Tech World</h1>
 
-</html>
-
+  <!-- Side navigation -->
+  <div class="sidenav">
+    <p>Name: {{user_id.username}}</p>  
+    <p> Email: {{user_id.useremail}}</p> 
+    <span hidden>{{user_id.user_id}} </span> 
+    <a href="/main">Home</a>
+    {{#if logged_in}}
+    <a href="/logout">Logout</a>
+    {{else}}
+    <a href="/login">Login</a>
+    {{/if}}
+    <a href="/dashboard">Dashboard</a>
+    <a href="/login">Login</a>
+  </div>
+ <body>
+    {{{ body }}}
+    {{#each scripts}}
+    <script src="js/{{script}}"></script>
+    {{/each}};
+ </body>
+ </html>
