--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,12 +1,24 @@
-main class="col-md-8">
-    <div class="container">
-        <div class='row'></div>
-            <div class="card col-lg-12 d-flex flex-wrap justify-content-center">
-                <a href = '/blog'>
-                <h3> {{data.blogName}} <span hidden>{{data.id}} </span> </a> <small> on {{format_date data.dateCreated}} by {{data.user.name}} </small> </h3>
-                <p>{{data.content}}</p> </a>
+<main>
+    <div class="col-md-8">
+        <div class="container">
+            <div class='row'>
+                <div class="card col-lg-12 d-flex flex-wrap justify-content-center">
+                    <h3> {{finalBlog.blogName}} by {{finalBlog.user.name}} <span hidden>{{finalBlog.id}}  </span> </a> <small>  on  {{format_date finalBlog.dateCreated}} </small> </h3>
+                    <p>{{finalBlog.content}}</p> </a>
+                </div>
             </div>
-
+            <div class='row'>
+                <div class="card col-lg-12 d-flex flex-wrap justify-content-center">
+                        {{#each finalBlog.comments as |comment| }}
+                         <p>{{comment.comment}} by {{comment.user.name}} <small>  on {{format_date comment.dateCreated}} </small></p>  
+                        {{/each}}  
+                    <div class="input-group mb-3" id="comment-form">
+                        <input type="text" id="commentText" class="form-control" placeholder="Type comment">
+                        <button data-blogid="{{finalBlog.id}}" class="btn commentBtn btn-outline-secondary" type="button" id="button-comment">Comment</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </main>
+<script src="/js/comment.js"></script>
