--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,23 +13,21 @@
   <link rel="stylesheet" href="/css/jass.css">
   <link rel="stylesheet" href="/css/style.css">
 </head>
-
-
-    <h1>Talking the Tech World</h1>
+  <h1>Talking the Tech World</h1>
 
   <!-- Side navigation -->
   <div class="sidenav">
-    <p>Name: {{user_id.username}}</p>  
+    <p>Name: {{user_id.username}}{{newBlog.username}}</p>  
     <p> Email: {{user_id.useremail}}</p> 
     <span hidden>{{user_id.user_id}} </span> 
-    <a href="/main">Home</a>
+    <a href="/">Home</a>
     {{#if logged_in}}
-    <a href="/logout">Logout</a>
+    <a href="logout">Logout</a>
     {{else}}
-    <a href="/login">Login</a>
+    <a href="login">Login</a>
     {{/if}}
     <a href="/dashboard">Dashboard</a>
-    <a href="/login">Login</a>
+  
   </div>
  <body>
     {{{ body }}}
