--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -17,8 +17,10 @@
                         <button data-blogid="{{finalBlog.id}}" class="btn commentBtn btn-outline-secondary" type="button" id="button-comment">Comment</button>
                     </div>
                 </div>
+                <button type="submit" class="btn updateBlogBtn  btn-primary">Update Blog</button>
             </div>
         </div>
     </div>
 </main>
+
 <script src="/js/comment.js"></script>
