new blog working

--- a/views/addBlog.handlebars
+++ b/views/addBlog.handlebars
@@ -1,8 +1,16 @@
-<form id='new-blog'>
-    <label>Enter Blog Name</label>
-    <input type="text" class="form-control" id='blog-name' placeholder="Type blog name">
-    <label>Enter Content</label>
-    <input type="text" class="form-control" id='blog-content' placeholder="Type content">
-    <button type="submit" class="newBlog btn btn-primary">New Blog</button>
-</form> >
-<script src="/js/newBlog.js"></script>
+<main>
+    <div class="col-md-8">
+        <div class="container">
+            <div class='row'>
+                <form id='new-blog'>
+                    <label>Enter Blog Name</label>
+                    <input type="text" class="form-control" id='blog-name' placeholder="Type blog name">
+                    <label>Enter Content</label>
+                    <input type="text" class="form-control" id='blog-content' placeholder="Type content">
+                    <button type="submit" class="newBlog btn btn-primary">Post Blog</button>
+                </form> >
+            </div>
+        </div>
+    </div>
+</main>
+<script src="js/addBlog.js"></script>
