--- a/public/css/style.css
+++ b/public/css/style.css
@@ -62,6 +62,10 @@ h1{
   background-color: rgb(44, 42, 42); /* Black */ 
   color:#818181;
 }
+#button-blog{
+  background-color: rgb(44, 42, 42); /* Black */ 
+  color:#818181;
+}
 
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
