--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,7 @@
  <body>
     {{{ body }}}
     {{#if user_id.logged_in}}
-    <script src="js/logout.js"></script>
+    <script src="/js/logout.js"></script>
     {{/if}};
  </body>
  </html>
