--- a/views/addBlog.handlebars
+++ b/views/addBlog.handlebars
@@ -2,13 +2,15 @@
     <div class="col-md-8">
         <div class="container">
             <div class='row'>
-                <form id='new-blog'>
-                    <label>Enter Blog Name</label>
-                    <input type="text" class="form-control" id='blog-name' placeholder="Type blog name">
-                    <label>Enter Content</label>
-                    <input type="text" class="form-control" id='blog-content' placeholder="Type content">
-                    <button type="submit" class="newBlog btn btn-primary">Post Blog</button>
-                </form> >
+                 <form id='new-blog'>
+                    <div class="card col-lg-12 d-flex flex-wrap justify-content-center">
+                        <div class="input-group mb-3" id="new-blog">
+                            <input type="text" class="form-control" id='blog-name' placeholder="Type blog name">
+                            <input type="text" class="form-control" id='blog-content' placeholder="Type content">
+                            <button type="submit" class="newBlog btn btn-primary" id="button-add">Post Blog</button>
+                        </div>  
+                    </div>
+                </form> 
             </div>
         </div>
     </div>
